--- a/qiime2-2022.8-DADA2-SILVA138.1-PR2_4.14.0/config/qiime2-2022.8-SILVA138.1-PR2-4.14.0.cfg
+++ b/qiime2-2022.8-DADA2-SILVA138.1-PR2_4.14.0/config/qiime2-2022.8-SILVA138.1-PR2-4.14.0.cfg
@@ -5,6 +5,6 @@ qiime2version=qiime2-2022.8
 #this will then become the sample names in the pipeline if not otherwise changed in the manifest.csv file
 rawFileEndingR1=.R1.fastq.gz
 rawFileEndingR2=.R2.fastq.gz
-bbsplitdb=
-PR2db=/home/inigo/databases/qiime2-classification-db/pr2_version_4.14.0_SSU-515FY-926R-classifier.qza
-SILVAdb=/home/inigo/databases/qiime2-classification-db/silva-138.1-ssu-nr99-515FY-926R-classifier.qza
+bbsplitdb=/home/$USER/databases/bbsplit-db/EUK-PROK-bbsplit-db/
+PR2db=/home/$USER/databases/qiime2-classification-db/pr2_version_4.14.0_SSU-515FY-926R-classifier.qza
+SILVAdb=/home/$USER/databases/qiime2-classification-db/silva-138.1-ssu-nr99-515FY-926R-classifier.qza
