--- a/qiime2-2022.2-DADA2-SILVA138.1-PR2_4.14.0/config/qiime2-2022.2-SILVA138.1-PR2-4.14.0.cfg
+++ b/qiime2-2022.2-DADA2-SILVA138.1-PR2_4.14.0/config/qiime2-2022.2-SILVA138.1-PR2-4.14.0.cfg
@@ -8,3 +8,5 @@ rawFileEndingR2=.R2.fastq.gz
 bbsplitdb=/home/$USER/databases/bbsplit-db/EUK-PROK-bbsplit-db/
 PR2db=/home/$USER/databases/qiime2-classification-db/pr2_version_4.14.0_SSU-515FY-926R-classifier.qza
 SILVAdb=/home/$USER/databases/qiime2-classification-db/silva-138.1-ssu-nr99-515FY-926R-classifier.qza
+trimR1=220
+trimR2=180
