--- a/qiime2-2022.2-DADA2-SILVA138.1-PR2_4.14.0/config/qiime2-2022.2-SILVA138.1-PR2-4.14.0.cfg
+++ b/qiime2-2022.2-DADA2-SILVA138.1-PR2_4.14.0/config/qiime2-2022.2-SILVA138.1-PR2-4.14.0.cfg
@@ -10,3 +10,9 @@ PR2db=/home/$USER/databases/qiime2-classification-db/pr2_version_4.14.0_SSU-515F
 SILVAdb=/home/$USER/databases/qiime2-classification-db/silva-138.1-ssu-nr99-515FY-926R-classifier.qza
 trimR1=220
 trimR2=180
+#set to "true" if you want to add in-silico mocks to your analysis
+inSilicoMocks=false
+#if you need the "Fuhrman lab-brand" in-silico mocks they can be found here:
+#https://github.com/jcmcnch/in-silico-mocks
+#make sure to correctly specify their location in the variable below
+inSilicoMockLocation=/home/db/in-silico-mocks/
