--- a/qiime2-2024.10-DADA2-SILVA138.1-PR2_4.14.0_EMP_primers/config/qiime2-2024.10-DADA2-SILVA138.1-PR2_4.14.0_EMP_primers.cfg
+++ b/qiime2-2024.10-DADA2-SILVA138.1-PR2_4.14.0_EMP_primers/config/qiime2-2024.10-DADA2-SILVA138.1-PR2_4.14.0_EMP_primers.cfg
@@ -6,8 +6,8 @@ qiime2version=qiime2-amplicon-2024.10
 rawFileEndingR1=.R1.fastq.gz
 rawFileEndingR2=.R2.fastq.gz
 bbsplitdb=/home/$USER/databases/bbsplit-db/EUK-PROK-bbsplit-db/
-PR2db=/home/$USER/databases/qiime2-classification-db/pr2_version_4.14.0_SSU-515FY-926R-classifier.qza
-SILVAdb=/home/$USER/databases/qiime2-classification-db/silva-138.1-ssu-nr99-515FY-926R-classifier.qza
+#using SILVA for everything for the moment, may include PR2 in future versions
+SILVAdb=/home/$USER/databases/qiime2-classification-db/silva-138-99-nb-classifier.qza
 trimR1=220
 trimR2=180
 #set to "true" if you want to add in-silico mocks to your analysis
