--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -12,7 +12,7 @@ configfile: "config/config.yml"
 # load rules
 # -----------------------------------------------------
 include: "rules/common.smk"
-include: "rules/process_reads.smk"
+include: "rules/remove_primers.smk"
 
 
 # optional messages, log and error handling
@@ -33,5 +33,5 @@ onerror:
 # -----------------------------------------------------
 rule all:
     input:
-        "results/multiqc/multiqc_report.html",
+        get_final_output(),
     default_target: True
