--- a/snakemake/config/config.yml
+++ b/snakemake/config/config.yml
@@ -1,6 +1,6 @@
 samplesheet: "config/samples.tsv"
 
-database_dir: "/home/jesse/databases/"
+database_dir: "databases"
 
 get_genome:
   ncbi_ftp: https://ftp.ncbi.nlm.nih.gov/genomes/all/GCF/000/146/045/GCF_000146045.2_R64/GCF_000146045.2_R64_genomic.fna.gz
