--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -11,9 +11,10 @@ configfile: "config/config.yml"
 # load rules
 # -----------------------------------------------------
 include: "rules/common.smk"
-include: "rules/remove_primers.smk"
 include: "rules/download_databases.smk"
 include: "rules/prepare_bbsplit_db.smk"
+include: "rules/00-remove_primers.smk"
+include: "rules/01-split-16S-18S.smk"
 
 # optional messages, log and error handling
 # -----------------------------------------------------
