--- a/snakemake/workflow/Snakefile
+++ b/snakemake/workflow/Snakefile
@@ -15,6 +15,7 @@ include: "rules/download_databases.smk"
 include: "rules/prepare_bbsplit_db.smk"
 include: "rules/00-remove_primers.smk"
 include: "rules/01-split-16S-18S.smk"
+include: "rules/02-denoise-and-export-prok.smk"
 
 # optional messages, log and error handling
 # -----------------------------------------------------
